--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
-Package: RAdwords
+Package: bingRAds
 Type: Package
-Title: Loading Google Adwords Data into R
-Description: Aims at loading Google Adwords data into R. Adwords is an online
+Title: Loading Bing Ads Data into R
+Description: Aims at loading Bing Ads data into R. Adwords is an online
     advertising service that enables advertisers to display advertising copy to web
-    users (see <https://developers.google.com/adwords/> for more information). 
+    users (see <https://developers.bingads.microsoft.com/> for more information). 
     Therefore the package implements three main features. First, the package
-    provides an authentication process for R with the Google Adwords API (see 
-    <https://developers.google.com/adwords/api/> for more information) via OAUTH2.
-    Second, the package offers an interface to apply the Adwords query language in
-    R and query the Adwords API with ad-hoc reports. Third, the received data are
+    provides an authentication process for R with the Bing Ads API (see 
+    <https://docs.microsoft.com/en-us/bingads/guides/get-started> for more information) via OAUTH2.
+    Second, the package offers an interface to apply the Bing Ads query language in
+    R and query the Bing Ads API with ad-hoc reports. Third, the received data are
     transformed into suitable data formats for further data processing and data
     analysis.
-Version: 0.1.14
+Version: 0.1.0
 Author: Johannes Burkhardt <johannes.burkhardt@gmail.com>, Matthias Bannert
-    <matthias.bannert@gmail.com>
+    <matthias.bannert@gmail.com>, Alexandre de Souza <alexandre@aledsz.com.br>
 Maintainer: Johannes Burkhardt <johannes.burkhardt@gmail.com>
 Depends:
     R (>= 3.0.0)
@@ -21,6 +21,6 @@ Imports:
     RCurl,
     rjson
 License: MIT + file LICENSE
-URL: https://github.com/jburkhardt/RAdwords, https://developers.google.com/adwords, https://developers.google.com/adwords/api/
-BugReports: https://github.com/jburkhardt/RAdwords/issues
+URL: https://github.com/aleDsz/bingRAds, https://developers.google.com/adwords, https://developers.google.com/adwords/api/
+BugReports: https://github.com/aleDsz/bingRAds/issues
 RoxygenNote: 6.0.1
