Update gh pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: bingRAds
+description: Loading Bing Ads data into R
 theme: jekyll-theme-cayman
+show_downloads: true
+google_analytics: UA-109695266-1
